# altium-designer-mcp

./: .editorconfig  .env.local.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STYLE.md  TODO.md  codecov.yml  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: check-toolchain-pin.sh  cleanup-caches.js
.github/workflows/: ci_main.yml  ci_pr.yml  cleanup_caches.yml  release.yml
config/: example-config.json
docs/: AGENT_GUIDE.md  AI_WORKFLOW.md  ANTIGRAVITY_GUIDE.md  ARCHITECTURE.md  CLAUDE_CODE_GUIDE.md  COVERAGE_AUDIT.md  FIXTURE_COVERAGE.md  IMPLEMENTATION_PLAN.md  PCBLIB_FORMAT.md  SCHLIB_FORMAT.md  SECURITY.md  TOOLS.md  VISION.md  errors.md
docs/format-re-findings/: PCBLIB_VERIFIED_SPEC.md  README.md  SCHLIB_VERIFIED_SPEC.md  pcb_discrepancies.json  pcb_live_altium_gaps.json  sch_discrepancies.json  sch_live_altium_gaps.json
scripts/: Generate-Samples.ps1  README.md  Resolve-AltiumExe.ps1  Verify-Libraries.ps1  analyze_pcblib.py  analyze_schlib.py  sample.PcbLib  sample.SchLib
scripts/altium/: README.md  Verify-Libraries.ps1
scripts/altium/generate/: GenerateSamples.PrjScr  GenerateSamples.pas
scripts/altium/verify/: AltiumVerify.PrjScr  (+1 more)
scripts/analyse/: analyse_pcblib.py  analyse_schlib.py
scripts/samples/: README.md  footprints.PcbLib  pads.PcbLib  sample.SchLib  symbols.SchLib
src/: error.rs  lib.rs  main.rs  util.rs
src/altium/: base64_opt.rs  bytes.rs  error.rs  framing.rs  libpkg.rs  mod.rs  serde_round.rs  text.rs
src/config/: mod.rs  settings.rs
src/ipc7351/: density.rs  mod.rs  naming.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tool_definitions.rs  tool_docs.rs  transport.rs
src/security/: audit.rs  mod.rs  rate_limit.rs
tests/: component_body_parsing.rs  file_io_roundtrip.rs  fill_parsing.rs  mcp_e2e.rs  mcp_integration.rs  model_parsing.rs  pcblib_analysis.rs  pcblib_roundtrip.rs  perf_tests.rs  property_tests.rs  region_parsing.rs  sample_library_integration.rs  samples_pcblib.rs  samples_schlib.rs  schlib_analysis.rs  stress_tests.rs  text_parsing.rs
tests/integration/: mcp_client.py  requirements.txt  test_altium_readability.py  test_mcp_tools.py
(+51 files in other folders)
