[package]
name = "altium-designer-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
description = "MCP server for AI-assisted Altium Designer component library management"
repository = "https://github.com/embedded-society/altium-designer-mcp"
readme = "README.md"
keywords = ["mcp", "altium", "pcb", "eda", "footprint"]
categories = ["development-tools", "command-line-utilities"]
authors = ["The Embedded Society"]

[lib]
name = "altium_designer_mcp"
path = "src/lib.rs"

[[bin]]
name = "altium-designer-mcp"
path = "src/main.rs"

[dependencies]
# Async runtime (minimal features for MCP server)
# - rt: basic runtime for block_on
# - io-util: AsyncBufReadExt, AsyncWriteExt, BufReader
# - io-std: stdin(), stdout()
# - macros: #[tokio::test] attribute
# - time: timeout for operations
# - signal: graceful shutdown handling (SIGTERM/SIGINT/Ctrl+C)
# - fs: async file operations for library I/O
tokio = { version = "1", features = ["rt", "io-util", "io-std", "macros", "time", "signal", "fs"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0"

# Platform-specific directories
dirs = "6.0"

# OLE Compound File Binary format (for Altium files)
cfb = "0.10"

# CSV handling for component database
csv = "1.3"

# Glob pattern matching
glob = "0.3"

# Zlib decompression (for embedded 3D models)
flate2 = "1.0"

# Bitflags for PCB primitive flags
bitflags = { version = "2.6", features = ["serde"] }

# Character encoding (for Windows-1252 in legacy Altium files)
encoding_rs = "0.8"

# UUID generation (for 3D model GUIDs)
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
# Async testing utilities
tokio-test = "0.4"
# Temporary directories for tests
tempfile = "3.15"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow multiple versions of transitive dependencies (we can't control these)
multiple_crate_versions = "allow"
